add webgl check

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <script type="module">
 
     import * as THREE from 'three';
-    import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
+    import { OrbitControls }  from 'three/addons/controls/OrbitControls.js';
+    import WebGL from 'three/addons/capabilities/WebGL.js'; // WebGL is default export
 
     const scene = new THREE.Scene();
     const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
@@ -48,7 +49,13 @@
       cube.rotation.y += 0.01;
       renderer.render( scene, camera );
     }
-    animate();
+
+    if ( WebGL.isWebGLAvailable() ) { // Initiate function or other initializations here
+      animate();
+    } else {
+      const warning = WebGL.getWebGLErrorMessage();
+      document.getElementById( 'container' ).appendChild( warning );
+    }
 
   </script>
   </body>
